[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magic123"
version = "0.1.2"
description = "Magic123: one image to high-quality 3D object generation using 2D and 3D diffusion priors."
readme = "readme.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Guocheng Qian" }
]
keywords = ["3d-generation", "diffusion", "nerf", "cuda", "pytorch"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "tqdm",
  "rich",
  "ninja",
  "numpy",
  "scipy",
  "scikit-learn",
  "matplotlib",
  "opencv-python",
  "imageio",
  "imageio-ffmpeg",
  "pandas",
  "torch",
  "torchvision",
  "torch-ema",
  "einops",
  "tensorboard",
  "tensorboardX",
  "dearpygui",
  "huggingface_hub<1.0",
  "diffusers>=0.9.0,<1.0",
  "accelerate",
  # transformers 5.x removed CLIPFeatureExtractor and other symbols this code relies on.
  "transformers>=4.25,<5",
  "xatlas",
  "PyMCubes",
  "omegaconf",
  "pytorch-lightning",
  "taming-transformers-rom1504",
  "kornia",
  "gdown",
  "trimesh",
  "pymeshlab",
  "timm==0.6.7",
  "easydict",
  "wandb",
  "termcolor",
  "sentencepiece",
  "psutil",
  "lpips",
]

[project.optional-dependencies]
cuda = []
# Image preprocessing (foreground segmentation) only; not needed for training.
# These pull heavy/old transitive deps, so they are kept out of the core install.
preprocess = ["rembg", "carvekit-colab"]
dev = ["build", "twine"]

[project.urls]
Homepage = "https://guochengqian.github.io/project/magic123/"
Repository = "https://github.com/guochengqian/Magic123"
Issues = "https://github.com/guochengqian/Magic123/issues"

[tool.setuptools]
include-package-data = true
py-modules = [
  "activation",
  "dpt",
  "encoding",
  "gradio_app",
  "main",
  "meshutils",
  "optimizer",
  "preprocess_image",
  "setup_cuda_ext",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "all_metrics*",
  "dnnultis*",
  "freqencoder*",
  "gridencoder*",
  "guidance*",
  "ldm*",
  "midas*",
  "nerf*",
  "raymarching*",
  "render*",
  "shencoder*",
  "taichi_modules*",
  "taming*",
]
namespaces = true
